python/tests/gold/linkerdheadermapping/snapshots/econf.json
{
  "layered_runtime": {
    "layers": [
      {
        "name": "static_layer",
        "static_layer": {
          "re2.max_program_size.error_level": 200,
          "envoy.reloadable_features.no_extension_lookup_by_name": false
        }
      }
    ]
  },
  "static_resources": {
    "clusters": [
      {
        "alt_stat_name": "127_0_0_1_8877",
        "connect_timeout": "3.000s",
        "dns_lookup_family": "V4_ONLY",
        "lb_policy": "ROUND_ROBIN",
        "load_assignment": {
          "cluster_name": "cluster_127_0_0_1_8877_default",
          "endpoints": [
            {
              "lb_endpoints": [
                {
                  "endpoint": {
                    "address": {
                      "socket_address": {
                        "address": "127.0.0.1",
                        "port_value": 8877,
                        "protocol": "TCP"
                      }
                    }
                  }
                }
              ]
            }
          ]
        },
        "name": "cluster_127_0_0_1_8877_default",
        "type": "STRICT_DNS"
      },
      {
        "alt_stat_name": "linkerdheadermapping_http_addlinkerdonly",
        "connect_timeout": "3.000s",
        "dns_lookup_family": "V4_ONLY",
        "lb_policy": "ROUND_ROBIN",
        "load_assignment": {
          "cluster_name": "cluster_linkerdheadermapping_http_addlinkerdonly_default",
          "endpoints": [
            {
              "lb_endpoints": [
                {
                  "endpoint": {
                    "address": {
                      "socket_address": {
                        "address": "linkerdheadermapping-http-addlinkerdonly",
                        "port_value": 80,
                        "protocol": "TCP"
                      }
                    }
                  }
                }
              ]
            }
          ]
        },
        "name": "cluster_linkerdheadermapping_http_addlinkerdonly_default",
        "type": "STRICT_DNS"
      },
      {
        "alt_stat_name": "linkerdheadermapping_http",
        "connect_timeout": "3.000s",
        "dns_lookup_family": "V4_ONLY",
        "lb_policy": "ROUND_ROBIN",
        "load_assignment": {
          "cluster_name": "cluster_linkerdheadermapping_http_default",
          "endpoints": [
            {
              "lb_endpoints": [
                {
                  "endpoint": {
                    "address": {
                      "socket_address": {
                        "address": "linkerdheadermapping-http",
                        "port_value": 80,
                        "protocol": "TCP"
                      }
                    }
                  }
                }
              ]
            }
          ]
        },
        "name": "cluster_linkerdheadermapping_http_default",
        "type": "STRICT_DNS"
      },
      {
        "alt_stat_name": "linkerdheadermapping_http_noheader",
        "connect_timeout": "3.000s",
        "dns_lookup_family": "V4_ONLY",
        "lb_policy": "ROUND_ROBIN",
        "load_assignment": {
          "cluster_name": "cluster_linkerdheadermapping_http_noheader_default",
          "endpoints": [
            {
              "lb_endpoints": [
                {
                  "endpoint": {
                    "address": {
                      "socket_address": {
                        "address": "linkerdheadermapping-http-noheader",
                        "port_value": 80,
                        "protocol": "TCP"
                      }
                    }
                  }
                }
              ]
            }
          ]
        },
        "name": "cluster_linkerdheadermapping_http_noheader_default",
        "type": "STRICT_DNS"
      }
    ],
    "listeners": [
      {
        "address": {
          "socket_address": {
            "address": "0.0.0.0",
            "port_value": 8080,
            "protocol": "TCP"
          }
        },
        "filter_chains": [
          {
            "filter_chain_match": {
              "transport_protocol": "tls"
            },
            "filters": [
              {
                "name": "envoy.filters.network.http_connection_manager",
                "typed_config": {
                  "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager",
                  "access_log": [
                    {
                      "name": "envoy.access_loggers.file",
                      "typed_config": {
                        "@type": "type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog",
                        "log_format": {
                          "text_format_source": {
                            "inline_string": "ACCESS [%START_TIME%] \"%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%\" %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% \"%REQ(X-FORWARDED-FOR)%\" \"%REQ(USER-AGENT)%\" \"%REQ(X-REQUEST-ID)%\" \"%REQ(:AUTHORITY)%\" \"%UPSTREAM_HOST%\"\n"
                          }
                        },
                        "path": "/dev/fd/1"
                      }
                    }
                  ],
                  "http_filters": [
                    {
                      "name": "envoy.filters.http.cors"
                    },
                    {
                      "name": "envoy.filters.http.router"
                    }
                  ],
                  "http_protocol_options": {
                    "accept_http_10": false
                  },
                  "normalize_path": true,
                  "preserve_external_request_id": false,
                  "route_config": {
                    "virtual_hosts": [
                      {
                        "domains": [
                          "*"
                        ],
                        "name": "listener-8080-linkerdheadermapping-*",
                        "routes": [
                          {
                            "match": {
                              "case_sensitive": true,
                              "headers": [
                                {
                                  "exact_match": "https",
                                  "name": "x-forwarded-proto"
                                }
                              ],
                              "prefix": "/target_add_linkerd_header_only/",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_linkerdheadermapping_http_addlinkerdonly_default"
                              }
                            },
                            "request_headers_to_add": [
                              {
                                "append": true,
                                "header": {
                                  "key": "l5d-dst-override",
                                  "value": "linkerdheadermapping-http-addlinkerdonly:80"
                                }
                              }
                            ],
                            "route": {
                              "cluster": "cluster_linkerdheadermapping_http_addlinkerdonly_default",
                              "prefix_rewrite": "/",
                              "priority": null,
                              "timeout": "3.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "prefix": "/target_add_linkerd_header_only/",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_linkerdheadermapping_http_addlinkerdonly_default"
                              }
                            },
                            "request_headers_to_add": [
                              {
                                "append": true,
                                "header": {
                                  "key": "l5d-dst-override",
                                  "value": "linkerdheadermapping-http-addlinkerdonly:80"
                                }
                              }
                            ],
                            "route": {
                              "cluster": "cluster_linkerdheadermapping_http_addlinkerdonly_default",
                              "prefix_rewrite": "/",
                              "priority": null,
                              "timeout": "3.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "headers": [
                                {
                                  "exact_match": "https",
                                  "name": "x-forwarded-proto"
                                }
                              ],
                              "prefix": "/ambassador/v0/check_ready",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_default"
                              }
                            },
                            "request_headers_to_add": [
                              {
                                "append": false,
                                "header": {
                                  "key": "fruit",
                                  "value": "orange"
                                }
                              },
                              {
                                "append": true,
                                "header": {
                                  "key": "l5d-dst-override",
                                  "value": "127.0.0.1:8877"
                                }
                              }
                            ],
                            "request_headers_to_remove": [
                              "x-evil-header"
                            ],
                            "route": {
                              "cluster": "cluster_127_0_0_1_8877_default",
                              "prefix_rewrite": "/ambassador/v0/check_ready",
                              "priority": null,
                              "timeout": "10.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "prefix": "/ambassador/v0/check_ready",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_default"
                              }
                            },
                            "request_headers_to_add": [
                              {
                                "append": false,
                                "header": {
                                  "key": "fruit",
                                  "value": "orange"
                                }
                              },
                              {
                                "append": true,
                                "header": {
                                  "key": "l5d-dst-override",
                                  "value": "127.0.0.1:8877"
                                }
                              }
                            ],
                            "request_headers_to_remove": [
                              "x-evil-header"
                            ],
                            "route": {
                              "cluster": "cluster_127_0_0_1_8877_default",
                              "prefix_rewrite": "/ambassador/v0/check_ready",
                              "priority": null,
                              "timeout": "10.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "headers": [
                                {
                                  "exact_match": "https",
                                  "name": "x-forwarded-proto"
                                }
                              ],
                              "prefix": "/ambassador/v0/check_alive",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_default"
                              }
                            },
                            "request_headers_to_add": [
                              {
                                "append": false,
                                "header": {
                                  "key": "fruit",
                                  "value": "orange"
                                }
                              },
                              {
                                "append": true,
                                "header": {
                                  "key": "l5d-dst-override",
                                  "value": "127.0.0.1:8877"
                                }
                              }
                            ],
                            "request_headers_to_remove": [
                              "x-evil-header"
                            ],
                            "route": {
                              "cluster": "cluster_127_0_0_1_8877_default",
                              "prefix_rewrite": "/ambassador/v0/check_alive",
                              "priority": null,
                              "timeout": "10.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "prefix": "/ambassador/v0/check_alive",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_default"
                              }
                            },
                            "request_headers_to_add": [
                              {
                                "append": false,
                                "header": {
                                  "key": "fruit",
                                  "value": "orange"
                                }
                              },
                              {
                                "append": true,
                                "header": {
                                  "key": "l5d-dst-override",
                                  "value": "127.0.0.1:8877"
                                }
                              }
                            ],
                            "request_headers_to_remove": [
                              "x-evil-header"
                            ],
                            "route": {
                              "cluster": "cluster_127_0_0_1_8877_default",
                              "prefix_rewrite": "/ambassador/v0/check_alive",
                              "priority": null,
                              "timeout": "10.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "headers": [
                                {
                                  "exact_match": "https",
                                  "name": "x-forwarded-proto"
                                }
                              ],
                              "prefix": "/target_no_header/",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_linkerdheadermapping_http_noheader_default"
                              }
                            },
                            "request_headers_to_add": [
                              {
                                "append": false,
                                "header": {
                                  "key": "fruit",
                                  "value": "orange"
                                }
                              }
                            ],
                            "request_headers_to_remove": [
                              "x-evil-header"
                            ],
                            "route": {
                              "cluster": "cluster_linkerdheadermapping_http_noheader_default",
                              "prefix_rewrite": "/",
                              "priority": null,
                              "timeout": "3.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "prefix": "/target_no_header/",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_linkerdheadermapping_http_noheader_default"
                              }
                            },
                            "request_headers_to_add": [
                              {
                                "append": false,
                                "header": {
                                  "key": "fruit",
                                  "value": "orange"
                                }
                              }
                            ],
                            "request_headers_to_remove": [
                              "x-evil-header"
                            ],
                            "route": {
                              "cluster": "cluster_linkerdheadermapping_http_noheader_default",
                              "prefix_rewrite": "/",
                              "priority": null,
                              "timeout": "3.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "headers": [
                                {
                                  "exact_match": "https",
                                  "name": "x-forwarded-proto"
                                }
                              ],
                              "prefix": "/ambassador/v0/",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_default"
                              }
                            },
                            "request_headers_to_add": [
                              {
                                "append": false,
                                "header": {
                                  "key": "fruit",
                                  "value": "orange"
                                }
                              },
                              {
                                "append": true,
                                "header": {
                                  "key": "l5d-dst-override",
                                  "value": "127.0.0.1:8877"
                                }
                              }
                            ],
                            "request_headers_to_remove": [
                              "x-evil-header"
                            ],
                            "route": {
                              "cluster": "cluster_127_0_0_1_8877_default",
                              "prefix_rewrite": "/ambassador/v0/",
                              "priority": null,
                              "timeout": "10.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "prefix": "/ambassador/v0/",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_default"
                              }
                            },
                            "request_headers_to_add": [
                              {
                                "append": false,
                                "header": {
                                  "key": "fruit",
                                  "value": "orange"
                                }
                              },
                              {
                                "append": true,
                                "header": {
                                  "key": "l5d-dst-override",
                                  "value": "127.0.0.1:8877"
                                }
                              }
                            ],
                            "request_headers_to_remove": [
                              "x-evil-header"
                            ],
                            "route": {
                              "cluster": "cluster_127_0_0_1_8877_default",
                              "prefix_rewrite": "/ambassador/v0/",
                              "priority": null,
                              "timeout": "10.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "headers": [
                                {
                                  "exact_match": "https",
                                  "name": "x-forwarded-proto"
                                }
                              ],
                              "prefix": "/target/",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_linkerdheadermapping_http_default"
                              }
                            },
                            "request_headers_to_add": [
                              {
                                "append": false,
                                "header": {
                                  "key": "fruit",
                                  "value": "banana"
                                }
                              },
                              {
                                "append": true,
                                "header": {
                                  "key": "l5d-dst-override",
                                  "value": "linkerdheadermapping-http:80"
                                }
                              }
                            ],
                            "request_headers_to_remove": [
                              "x-evilness"
                            ],
                            "route": {
                              "cluster": "cluster_linkerdheadermapping_http_default",
                              "prefix_rewrite": "/",
                              "priority": null,
                              "timeout": "3.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "prefix": "/target/",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_linkerdheadermapping_http_default"
                              }
                            },
                            "request_headers_to_add": [
                              {
                                "append": false,
                                "header": {
                                  "key": "fruit",
                                  "value": "banana"
                                }
                              },
                              {
                                "append": true,
                                "header": {
                                  "key": "l5d-dst-override",
                                  "value": "linkerdheadermapping-http:80"
                                }
                              }
                            ],
                            "request_headers_to_remove": [
                              "x-evilness"
                            ],
                            "route": {
                              "cluster": "cluster_linkerdheadermapping_http_default",
                              "prefix_rewrite": "/",
                              "priority": null,
                              "timeout": "3.000s"
                            }
                          }
                        ]
                      }
                    ]
                  },
                  "server_name": "envoy",
                  "stat_prefix": "ingress_https",
                  "use_remote_address": true
                }
              }
            ]
          },
          {
            "filter_chain_match": {},
            "filters": [
              {
                "name": "envoy.filters.network.http_connection_manager",
                "typed_config": {
                  "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager",
                  "access_log": [
                    {
                      "name": "envoy.access_loggers.file",
                      "typed_config": {
                        "@type": "type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog",
                        "log_format": {
                          "text_format_source": {
                            "inline_string": "ACCESS [%START_TIME%] \"%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%\" %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% \"%REQ(X-FORWARDED-FOR)%\" \"%REQ(USER-AGENT)%\" \"%REQ(X-REQUEST-ID)%\" \"%REQ(:AUTHORITY)%\" \"%UPSTREAM_HOST%\"\n"
                          }
                        },
                        "path": "/dev/fd/1"
                      }
                    }
                  ],
                  "http_filters": [
                    {
                      "name": "envoy.filters.http.cors"
                    },
                    {
                      "name": "envoy.filters.http.router"
                    }
                  ],
                  "http_protocol_options": {
                    "accept_http_10": false
                  },
                  "normalize_path": true,
                  "preserve_external_request_id": false,
                  "route_config": {
                    "virtual_hosts": [
                      {
                        "domains": [
                          "*"
                        ],
                        "name": "listener-8080-linkerdheadermapping-*",
                        "routes": [
                          {
                            "match": {
                              "case_sensitive": true,
                              "headers": [
                                {
                                  "exact_match": "https",
                                  "name": "x-forwarded-proto"
                                }
                              ],
                              "prefix": "/target_add_linkerd_header_only/",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_linkerdheadermapping_http_addlinkerdonly_default"
                              }
                            },
                            "request_headers_to_add": [
                              {
                                "append": true,
                                "header": {
                                  "key": "l5d-dst-override",
                                  "value": "linkerdheadermapping-http-addlinkerdonly:80"
                                }
                              }
                            ],
                            "route": {
                              "cluster": "cluster_linkerdheadermapping_http_addlinkerdonly_default",
                              "prefix_rewrite": "/",
                              "priority": null,
                              "timeout": "3.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "prefix": "/target_add_linkerd_header_only/",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_linkerdheadermapping_http_addlinkerdonly_default"
                              }
                            },
                            "request_headers_to_add": [
                              {
                                "append": true,
                                "header": {
                                  "key": "l5d-dst-override",
                                  "value": "linkerdheadermapping-http-addlinkerdonly:80"
                                }
                              }
                            ],
                            "route": {
                              "cluster": "cluster_linkerdheadermapping_http_addlinkerdonly_default",
                              "prefix_rewrite": "/",
                              "priority": null,
                              "timeout": "3.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "headers": [
                                {
                                  "exact_match": "https",
                                  "name": "x-forwarded-proto"
                                }
                              ],
                              "prefix": "/ambassador/v0/check_ready",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_default"
                              }
                            },
                            "request_headers_to_add": [
                              {
                                "append": false,
                                "header": {
                                  "key": "fruit",
                                  "value": "orange"
                                }
                              },
                              {
                                "append": true,
                                "header": {
                                  "key": "l5d-dst-override",
                                  "value": "127.0.0.1:8877"
                                }
                              }
                            ],
                            "request_headers_to_remove": [
                              "x-evil-header"
                            ],
                            "route": {
                              "cluster": "cluster_127_0_0_1_8877_default",
                              "prefix_rewrite": "/ambassador/v0/check_ready",
                              "priority": null,
                              "timeout": "10.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "prefix": "/ambassador/v0/check_ready",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_default"
                              }
                            },
                            "request_headers_to_add": [
                              {
                                "append": false,
                                "header": {
                                  "key": "fruit",
                                  "value": "orange"
                                }
                              },
                              {
                                "append": true,
                                "header": {
                                  "key": "l5d-dst-override",
                                  "value": "127.0.0.1:8877"
                                }
                              }
                            ],
                            "request_headers_to_remove": [
                              "x-evil-header"
                            ],
                            "route": {
                              "cluster": "cluster_127_0_0_1_8877_default",
                              "prefix_rewrite": "/ambassador/v0/check_ready",
                              "priority": null,
                              "timeout": "10.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "headers": [
                                {
                                  "exact_match": "https",
                                  "name": "x-forwarded-proto"
                                }
                              ],
                              "prefix": "/ambassador/v0/check_alive",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_default"
                              }
                            },
                            "request_headers_to_add": [
                              {
                                "append": false,
                                "header": {
                                  "key": "fruit",
                                  "value": "orange"
                                }
                              },
                              {
                                "append": true,
                                "header": {
                                  "key": "l5d-dst-override",
                                  "value": "127.0.0.1:8877"
                                }
                              }
                            ],
                            "request_headers_to_remove": [
                              "x-evil-header"
                            ],
                            "route": {
                              "cluster": "cluster_127_0_0_1_8877_default",
                              "prefix_rewrite": "/ambassador/v0/check_alive",
                              "priority": null,
                              "timeout": "10.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "prefix": "/ambassador/v0/check_alive",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_default"
                              }
                            },
                            "request_headers_to_add": [
                              {
                                "append": false,
                                "header": {
                                  "key": "fruit",
                                  "value": "orange"
                                }
                              },
                              {
                                "append": true,
                                "header": {
                                  "key": "l5d-dst-override",
                                  "value": "127.0.0.1:8877"
                                }
                              }
                            ],
                            "request_headers_to_remove": [
                              "x-evil-header"
                            ],
                            "route": {
                              "cluster": "cluster_127_0_0_1_8877_default",
                              "prefix_rewrite": "/ambassador/v0/check_alive",
                              "priority": null,
                              "timeout": "10.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "headers": [
                                {
                                  "exact_match": "https",
                                  "name": "x-forwarded-proto"
                                }
                              ],
                              "prefix": "/target_no_header/",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_linkerdheadermapping_http_noheader_default"
                              }
                            },
                            "request_headers_to_add": [
                              {
                                "append": false,
                                "header": {
                                  "key": "fruit",
                                  "value": "orange"
                                }
                              }
                            ],
                            "request_headers_to_remove": [
                              "x-evil-header"
                            ],
                            "route": {
                              "cluster": "cluster_linkerdheadermapping_http_noheader_default",
                              "prefix_rewrite": "/",
                              "priority": null,
                              "timeout": "3.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "prefix": "/target_no_header/",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_linkerdheadermapping_http_noheader_default"
                              }
                            },
                            "request_headers_to_add": [
                              {
                                "append": false,
                                "header": {
                                  "key": "fruit",
                                  "value": "orange"
                                }
                              }
                            ],
                            "request_headers_to_remove": [
                              "x-evil-header"
                            ],
                            "route": {
                              "cluster": "cluster_linkerdheadermapping_http_noheader_default",
                              "prefix_rewrite": "/",
                              "priority": null,
                              "timeout": "3.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "headers": [
                                {
                                  "exact_match": "https",
                                  "name": "x-forwarded-proto"
                                }
                              ],
                              "prefix": "/ambassador/v0/",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_default"
                              }
                            },
                            "request_headers_to_add": [
                              {
                                "append": false,
                                "header": {
                                  "key": "fruit",
                                  "value": "orange"
                                }
                              },
                              {
                                "append": true,
                                "header": {
                                  "key": "l5d-dst-override",
                                  "value": "127.0.0.1:8877"
                                }
                              }
                            ],
                            "request_headers_to_remove": [
                              "x-evil-header"
                            ],
                            "route": {
                              "cluster": "cluster_127_0_0_1_8877_default",
                              "prefix_rewrite": "/ambassador/v0/",
                              "priority": null,
                              "timeout": "10.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "prefix": "/ambassador/v0/",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_default"
                              }
                            },
                            "request_headers_to_add": [
                              {
                                "append": false,
                                "header": {
                                  "key": "fruit",
                                  "value": "orange"
                                }
                              },
                              {
                                "append": true,
                                "header": {
                                  "key": "l5d-dst-override",
                                  "value": "127.0.0.1:8877"
                                }
                              }
                            ],
                            "request_headers_to_remove": [
                              "x-evil-header"
                            ],
                            "route": {
                              "cluster": "cluster_127_0_0_1_8877_default",
                              "prefix_rewrite": "/ambassador/v0/",
                              "priority": null,
                              "timeout": "10.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "headers": [
                                {
                                  "exact_match": "https",
                                  "name": "x-forwarded-proto"
                                }
                              ],
                              "prefix": "/target/",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_linkerdheadermapping_http_default"
                              }
                            },
                            "request_headers_to_add": [
                              {
                                "append": false,
                                "header": {
                                  "key": "fruit",
                                  "value": "banana"
                                }
                              },
                              {
                                "append": true,
                                "header": {
                                  "key": "l5d-dst-override",
                                  "value": "linkerdheadermapping-http:80"
                                }
                              }
                            ],
                            "request_headers_to_remove": [
                              "x-evilness"
                            ],
                            "route": {
                              "cluster": "cluster_linkerdheadermapping_http_default",
                              "prefix_rewrite": "/",
                              "priority": null,
                              "timeout": "3.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "prefix": "/target/",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_linkerdheadermapping_http_default"
                              }
                            },
                            "request_headers_to_add": [
                              {
                                "append": false,
                                "header": {
                                  "key": "fruit",
                                  "value": "banana"
                                }
                              },
                              {
                                "append": true,
                                "header": {
                                  "key": "l5d-dst-override",
                                  "value": "linkerdheadermapping-http:80"
                                }
                              }
                            ],
                            "request_headers_to_remove": [
                              "x-evilness"
                            ],
                            "route": {
                              "cluster": "cluster_linkerdheadermapping_http_default",
                              "prefix_rewrite": "/",
                              "priority": null,
                              "timeout": "3.000s"
                            }
                          }
                        ]
                      }
                    ]
                  },
                  "server_name": "envoy",
                  "stat_prefix": "ingress_https",
                  "use_remote_address": true
                }
              }
            ]
          }
        ],
        "listener_filters": [
          {
            "name": "envoy.filters.listener.tls_inspector"
          }
        ],
        "name": "listener-8080-linkerdheadermapping",
        "traffic_direction": "UNSPECIFIED"
      },
      {
        "address": {
          "socket_address": {
            "address": "0.0.0.0",
            "port_value": 8443,
            "protocol": "TCP"
          }
        },
        "filter_chains": [
          {
            "filter_chain_match": {
              "transport_protocol": "tls"
            },
            "filters": [
              {
                "name": "envoy.filters.network.http_connection_manager",
                "typed_config": {
                  "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager",
                  "access_log": [
                    {
                      "name": "envoy.access_loggers.file",
                      "typed_config": {
                        "@type": "type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog",
                        "log_format": {
                          "text_format_source": {
                            "inline_string": "ACCESS [%START_TIME%] \"%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%\" %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% \"%REQ(X-FORWARDED-FOR)%\" \"%REQ(USER-AGENT)%\" \"%REQ(X-REQUEST-ID)%\" \"%REQ(:AUTHORITY)%\" \"%UPSTREAM_HOST%\"\n"
                          }
                        },
                        "path": "/dev/fd/1"
                      }
                    }
                  ],
                  "http_filters": [
                    {
                      "name": "envoy.filters.http.cors"
                    },
                    {
                      "name": "envoy.filters.http.router"
                    }
                  ],
                  "http_protocol_options": {
                    "accept_http_10": false
                  },
                  "normalize_path": true,
                  "preserve_external_request_id": false,
                  "route_config": {
                    "virtual_hosts": [
                      {
                        "domains": [
                          "*"
                        ],
                        "name": "listener-8443-linkerdheadermapping-*",
                        "routes": [
                          {
                            "match": {
                              "case_sensitive": true,
                              "headers": [
                                {
                                  "exact_match": "https",
                                  "name": "x-forwarded-proto"
                                }
                              ],
                              "prefix": "/target_add_linkerd_header_only/",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_linkerdheadermapping_http_addlinkerdonly_default"
                              }
                            },
                            "request_headers_to_add": [
                              {
                                "append": true,
                                "header": {
                                  "key": "l5d-dst-override",
                                  "value": "linkerdheadermapping-http-addlinkerdonly:80"
                                }
                              }
                            ],
                            "route": {
                              "cluster": "cluster_linkerdheadermapping_http_addlinkerdonly_default",
                              "prefix_rewrite": "/",
                              "priority": null,
                              "timeout": "3.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "prefix": "/target_add_linkerd_header_only/",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_linkerdheadermapping_http_addlinkerdonly_default"
                              }
                            },
                            "request_headers_to_add": [
                              {
                                "append": true,
                                "header": {
                                  "key": "l5d-dst-override",
                                  "value": "linkerdheadermapping-http-addlinkerdonly:80"
                                }
                              }
                            ],
                            "route": {
                              "cluster": "cluster_linkerdheadermapping_http_addlinkerdonly_default",
                              "prefix_rewrite": "/",
                              "priority": null,
                              "timeout": "3.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "headers": [
                                {
                                  "exact_match": "https",
                                  "name": "x-forwarded-proto"
                                }
                              ],
                              "prefix": "/ambassador/v0/check_ready",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_default"
                              }
                            },
                            "request_headers_to_add": [
                              {
                                "append": false,
                                "header": {
                                  "key": "fruit",
                                  "value": "orange"
                                }
                              },
                              {
                                "append": true,
                                "header": {
                                  "key": "l5d-dst-override",
                                  "value": "127.0.0.1:8877"
                                }
                              }
                            ],
                            "request_headers_to_remove": [
                              "x-evil-header"
                            ],
                            "route": {
                              "cluster": "cluster_127_0_0_1_8877_default",
                              "prefix_rewrite": "/ambassador/v0/check_ready",
                              "priority": null,
                              "timeout": "10.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "prefix": "/ambassador/v0/check_ready",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_default"
                              }
                            },
                            "request_headers_to_add": [
                              {
                                "append": false,
                                "header": {
                                  "key": "fruit",
                                  "value": "orange"
                                }
                              },
                              {
                                "append": true,
                                "header": {
                                  "key": "l5d-dst-override",
                                  "value": "127.0.0.1:8877"
                                }
                              }
                            ],
                            "request_headers_to_remove": [
                              "x-evil-header"
                            ],
                            "route": {
                              "cluster": "cluster_127_0_0_1_8877_default",
                              "prefix_rewrite": "/ambassador/v0/check_ready",
                              "priority": null,
                              "timeout": "10.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "headers": [
                                {
                                  "exact_match": "https",
                                  "name": "x-forwarded-proto"
                                }
                              ],
                              "prefix": "/ambassador/v0/check_alive",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_default"
                              }
                            },
                            "request_headers_to_add": [
                              {
                                "append": false,
                                "header": {
                                  "key": "fruit",
                                  "value": "orange"
                                }
                              },
                              {
                                "append": true,
                                "header": {
                                  "key": "l5d-dst-override",
                                  "value": "127.0.0.1:8877"
                                }
                              }
                            ],
                            "request_headers_to_remove": [
                              "x-evil-header"
                            ],
                            "route": {
                              "cluster": "cluster_127_0_0_1_8877_default",
                              "prefix_rewrite": "/ambassador/v0/check_alive",
                              "priority": null,
                              "timeout": "10.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "prefix": "/ambassador/v0/check_alive",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_default"
                              }
                            },
                            "request_headers_to_add": [
                              {
                                "append": false,
                                "header": {
                                  "key": "fruit",
                                  "value": "orange"
                                }
                              },
                              {
                                "append": true,
                                "header": {
                                  "key": "l5d-dst-override",
                                  "value": "127.0.0.1:8877"
                                }
                              }
                            ],
                            "request_headers_to_remove": [
                              "x-evil-header"
                            ],
                            "route": {
                              "cluster": "cluster_127_0_0_1_8877_default",
                              "prefix_rewrite": "/ambassador/v0/check_alive",
                              "priority": null,
                              "timeout": "10.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "headers": [
                                {
                                  "exact_match": "https",
                                  "name": "x-forwarded-proto"
                                }
                              ],
                              "prefix": "/target_no_header/",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_linkerdheadermapping_http_noheader_default"
                              }
                            },
                            "request_headers_to_add": [
                              {
                                "append": false,
                                "header": {
                                  "key": "fruit",
                                  "value": "orange"
                                }
                              }
                            ],
                            "request_headers_to_remove": [
                              "x-evil-header"
                            ],
                            "route": {
                              "cluster": "cluster_linkerdheadermapping_http_noheader_default",
                              "prefix_rewrite": "/",
                              "priority": null,
                              "timeout": "3.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "prefix": "/target_no_header/",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_linkerdheadermapping_http_noheader_default"
                              }
                            },
                            "request_headers_to_add": [
                              {
                                "append": false,
                                "header": {
                                  "key": "fruit",
                                  "value": "orange"
                                }
                              }
                            ],
                            "request_headers_to_remove": [
                              "x-evil-header"
                            ],
                            "route": {
                              "cluster": "cluster_linkerdheadermapping_http_noheader_default",
                              "prefix_rewrite": "/",
                              "priority": null,
                              "timeout": "3.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "headers": [
                                {
                                  "exact_match": "https",
                                  "name": "x-forwarded-proto"
                                }
                              ],
                              "prefix": "/ambassador/v0/",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_default"
                              }
                            },
                            "request_headers_to_add": [
                              {
                                "append": false,
                                "header": {
                                  "key": "fruit",
                                  "value": "orange"
                                }
                              },
                              {
                                "append": true,
                                "header": {
                                  "key": "l5d-dst-override",
                                  "value": "127.0.0.1:8877"
                                }
                              }
                            ],
                            "request_headers_to_remove": [
                              "x-evil-header"
                            ],
                            "route": {
                              "cluster": "cluster_127_0_0_1_8877_default",
                              "prefix_rewrite": "/ambassador/v0/",
                              "priority": null,
                              "timeout": "10.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "prefix": "/ambassador/v0/",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_default"
                              }
                            },
                            "request_headers_to_add": [
                              {
                                "append": false,
                                "header": {
                                  "key": "fruit",
                                  "value": "orange"
                                }
                              },
                              {
                                "append": true,
                                "header": {
                                  "key": "l5d-dst-override",
                                  "value": "127.0.0.1:8877"
                                }
                              }
                            ],
                            "request_headers_to_remove": [
                              "x-evil-header"
                            ],
                            "route": {
                              "cluster": "cluster_127_0_0_1_8877_default",
                              "prefix_rewrite": "/ambassador/v0/",
                              "priority": null,
                              "timeout": "10.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "headers": [
                                {
                                  "exact_match": "https",
                                  "name": "x-forwarded-proto"
                                }
                              ],
                              "prefix": "/target/",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_linkerdheadermapping_http_default"
                              }
                            },
                            "request_headers_to_add": [
                              {
                                "append": false,
                                "header": {
                                  "key": "fruit",
                                  "value": "banana"
                                }
                              },
                              {
                                "append": true,
                                "header": {
                                  "key": "l5d-dst-override",
                                  "value": "linkerdheadermapping-http:80"
                                }
                              }
                            ],
                            "request_headers_to_remove": [
                              "x-evilness"
                            ],
                            "route": {
                              "cluster": "cluster_linkerdheadermapping_http_default",
                              "prefix_rewrite": "/",
                              "priority": null,
                              "timeout": "3.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "prefix": "/target/",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_linkerdheadermapping_http_default"
                              }
                            },
                            "request_headers_to_add": [
                              {
                                "append": false,
                                "header": {
                                  "key": "fruit",
                                  "value": "banana"
                                }
                              },
                              {
                                "append": true,
                                "header": {
                                  "key": "l5d-dst-override",
                                  "value": "linkerdheadermapping-http:80"
                                }
                              }
                            ],
                            "request_headers_to_remove": [
                              "x-evilness"
                            ],
                            "route": {
                              "cluster": "cluster_linkerdheadermapping_http_default",
                              "prefix_rewrite": "/",
                              "priority": null,
                              "timeout": "3.000s"
                            }
                          }
                        ]
                      }
                    ]
                  },
                  "server_name": "envoy",
                  "stat_prefix": "ingress_https",
                  "use_remote_address": true
                }
              }
            ]
          },
          {
            "filter_chain_match": {},
            "filters": [
              {
                "name": "envoy.filters.network.http_connection_manager",
                "typed_config": {
                  "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager",
                  "access_log": [
                    {
                      "name": "envoy.access_loggers.file",
                      "typed_config": {
                        "@type": "type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog",
                        "log_format": {
                          "text_format_source": {
                            "inline_string": "ACCESS [%START_TIME%] \"%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%\" %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% \"%REQ(X-FORWARDED-FOR)%\" \"%REQ(USER-AGENT)%\" \"%REQ(X-REQUEST-ID)%\" \"%REQ(:AUTHORITY)%\" \"%UPSTREAM_HOST%\"\n"
                          }
                        },
                        "path": "/dev/fd/1"
                      }
                    }
                  ],
                  "http_filters": [
                    {
                      "name": "envoy.filters.http.cors"
                    },
                    {
                      "name": "envoy.filters.http.router"
                    }
                  ],
                  "http_protocol_options": {
                    "accept_http_10": false
                  },
                  "normalize_path": true,
                  "preserve_external_request_id": false,
                  "route_config": {
                    "virtual_hosts": [
                      {
                        "domains": [
                          "*"
                        ],
                        "name": "listener-8443-linkerdheadermapping-*",
                        "routes": [
                          {
                            "match": {
                              "case_sensitive": true,
                              "headers": [
                                {
                                  "exact_match": "https",
                                  "name": "x-forwarded-proto"
                                }
                              ],
                              "prefix": "/target_add_linkerd_header_only/",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_linkerdheadermapping_http_addlinkerdonly_default"
                              }
                            },
                            "request_headers_to_add": [
                              {
                                "append": true,
                                "header": {
                                  "key": "l5d-dst-override",
                                  "value": "linkerdheadermapping-http-addlinkerdonly:80"
                                }
                              }
                            ],
                            "route": {
                              "cluster": "cluster_linkerdheadermapping_http_addlinkerdonly_default",
                              "prefix_rewrite": "/",
                              "priority": null,
                              "timeout": "3.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "prefix": "/target_add_linkerd_header_only/",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_linkerdheadermapping_http_addlinkerdonly_default"
                              }
                            },
                            "request_headers_to_add": [
                              {
                                "append": true,
                                "header": {
                                  "key": "l5d-dst-override",
                                  "value": "linkerdheadermapping-http-addlinkerdonly:80"
                                }
                              }
                            ],
                            "route": {
                              "cluster": "cluster_linkerdheadermapping_http_addlinkerdonly_default",
                              "prefix_rewrite": "/",
                              "priority": null,
                              "timeout": "3.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "headers": [
                                {
                                  "exact_match": "https",
                                  "name": "x-forwarded-proto"
                                }
                              ],
                              "prefix": "/ambassador/v0/check_ready",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_default"
                              }
                            },
                            "request_headers_to_add": [
                              {
                                "append": false,
                                "header": {
                                  "key": "fruit",
                                  "value": "orange"
                                }
                              },
                              {
                                "append": true,
                                "header": {
                                  "key": "l5d-dst-override",
                                  "value": "127.0.0.1:8877"
                                }
                              }
                            ],
                            "request_headers_to_remove": [
                              "x-evil-header"
                            ],
                            "route": {
                              "cluster": "cluster_127_0_0_1_8877_default",
                              "prefix_rewrite": "/ambassador/v0/check_ready",
                              "priority": null,
                              "timeout": "10.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "prefix": "/ambassador/v0/check_ready",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_default"
                              }
                            },
                            "request_headers_to_add": [
                              {
                                "append": false,
                                "header": {
                                  "key": "fruit",
                                  "value": "orange"
                                }
                              },
                              {
                                "append": true,
                                "header": {
                                  "key": "l5d-dst-override",
                                  "value": "127.0.0.1:8877"
                                }
                              }
                            ],
                            "request_headers_to_remove": [
                              "x-evil-header"
                            ],
                            "route": {
                              "cluster": "cluster_127_0_0_1_8877_default",
                              "prefix_rewrite": "/ambassador/v0/check_ready",
                              "priority": null,
                              "timeout": "10.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "headers": [
                                {
                                  "exact_match": "https",
                                  "name": "x-forwarded-proto"
                                }
                              ],
                              "prefix": "/ambassador/v0/check_alive",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_default"
                              }
                            },
                            "request_headers_to_add": [
                              {
                                "append": false,
                                "header": {
                                  "key": "fruit",
                                  "value": "orange"
                                }
                              },
                              {
                                "append": true,
                                "header": {
                                  "key": "l5d-dst-override",
                                  "value": "127.0.0.1:8877"
                                }
                              }
                            ],
                            "request_headers_to_remove": [
                              "x-evil-header"
                            ],
                            "route": {
                              "cluster": "cluster_127_0_0_1_8877_default",
                              "prefix_rewrite": "/ambassador/v0/check_alive",
                              "priority": null,
                              "timeout": "10.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "prefix": "/ambassador/v0/check_alive",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_default"
                              }
                            },
                            "request_headers_to_add": [
                              {
                                "append": false,
                                "header": {
                                  "key": "fruit",
                                  "value": "orange"
                                }
                              },
                              {
                                "append": true,
                                "header": {
                                  "key": "l5d-dst-override",
                                  "value": "127.0.0.1:8877"
                                }
                              }
                            ],
                            "request_headers_to_remove": [
                              "x-evil-header"
                            ],
                            "route": {
                              "cluster": "cluster_127_0_0_1_8877_default",
                              "prefix_rewrite": "/ambassador/v0/check_alive",
                              "priority": null,
                              "timeout": "10.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "headers": [
                                {
                                  "exact_match": "https",
                                  "name": "x-forwarded-proto"
                                }
                              ],
                              "prefix": "/target_no_header/",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_linkerdheadermapping_http_noheader_default"
                              }
                            },
                            "request_headers_to_add": [
                              {
                                "append": false,
                                "header": {
                                  "key": "fruit",
                                  "value": "orange"
                                }
                              }
                            ],
                            "request_headers_to_remove": [
                              "x-evil-header"
                            ],
                            "route": {
                              "cluster": "cluster_linkerdheadermapping_http_noheader_default",
                              "prefix_rewrite": "/",
                              "priority": null,
                              "timeout": "3.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "prefix": "/target_no_header/",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_linkerdheadermapping_http_noheader_default"
                              }
                            },
                            "request_headers_to_add": [
                              {
                                "append": false,
                                "header": {
                                  "key": "fruit",
                                  "value": "orange"
                                }
                              }
                            ],
                            "request_headers_to_remove": [
                              "x-evil-header"
                            ],
                            "route": {
                              "cluster": "cluster_linkerdheadermapping_http_noheader_default",
                              "prefix_rewrite": "/",
                              "priority": null,
                              "timeout": "3.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "headers": [
                                {
                                  "exact_match": "https",
                                  "name": "x-forwarded-proto"
                                }
                              ],
                              "prefix": "/ambassador/v0/",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_default"
                              }
                            },
                            "request_headers_to_add": [
                              {
                                "append": false,
                                "header": {
                                  "key": "fruit",
                                  "value": "orange"
                                }
                              },
                              {
                                "append": true,
                                "header": {
                                  "key": "l5d-dst-override",
                                  "value": "127.0.0.1:8877"
                                }
                              }
                            ],
                            "request_headers_to_remove": [
                              "x-evil-header"
                            ],
                            "route": {
                              "cluster": "cluster_127_0_0_1_8877_default",
                              "prefix_rewrite": "/ambassador/v0/",
                              "priority": null,
                              "timeout": "10.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "prefix": "/ambassador/v0/",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_default"
                              }
                            },
                            "request_headers_to_add": [
                              {
                                "append": false,
                                "header": {
                                  "key": "fruit",
                                  "value": "orange"
                                }
                              },
                              {
                                "append": true,
                                "header": {
                                  "key": "l5d-dst-override",
                                  "value": "127.0.0.1:8877"
                                }
                              }
                            ],
                            "request_headers_to_remove": [
                              "x-evil-header"
                            ],
                            "route": {
                              "cluster": "cluster_127_0_0_1_8877_default",
                              "prefix_rewrite": "/ambassador/v0/",
                              "priority": null,
                              "timeout": "10.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "headers": [
                                {
                                  "exact_match": "https",
                                  "name": "x-forwarded-proto"
                                }
                              ],
                              "prefix": "/target/",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_linkerdheadermapping_http_default"
                              }
                            },
                            "request_headers_to_add": [
                              {
                                "append": false,
                                "header": {
                                  "key": "fruit",
                                  "value": "banana"
                                }
                              },
                              {
                                "append": true,
                                "header": {
                                  "key": "l5d-dst-override",
                                  "value": "linkerdheadermapping-http:80"
                                }
                              }
                            ],
                            "request_headers_to_remove": [
                              "x-evilness"
                            ],
                            "route": {
                              "cluster": "cluster_linkerdheadermapping_http_default",
                              "prefix_rewrite": "/",
                              "priority": null,
                              "timeout": "3.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "prefix": "/target/",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_linkerdheadermapping_http_default"
                              }
                            },
                            "request_headers_to_add": [
                              {
                                "append": false,
                                "header": {
                                  "key": "fruit",
                                  "value": "banana"
                                }
                              },
                              {
                                "append": true,
                                "header": {
                                  "key": "l5d-dst-override",
                                  "value": "linkerdheadermapping-http:80"
                                }
                              }
                            ],
                            "request_headers_to_remove": [
                              "x-evilness"
                            ],
                            "route": {
                              "cluster": "cluster_linkerdheadermapping_http_default",
                              "prefix_rewrite": "/",
                              "priority": null,
                              "timeout": "3.000s"
                            }
                          }
                        ]
                      }
                    ]
                  },
                  "server_name": "envoy",
                  "stat_prefix": "ingress_https",
                  "use_remote_address": true
                }
              }
            ]
          }
        ],
        "listener_filters": [
          {
            "name": "envoy.filters.listener.tls_inspector"
          }
        ],
        "name": "listener-8443-linkerdheadermapping",
        "traffic_direction": "UNSPECIFIED"
      }
    ]
  }
}
